# docpilot

./: .dockerignore  .env.example  .gitignore  AGENT_README.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Doc_CV.md  Dockerfile  Dockerfile.production  Dockerfile.simple  Dockerfile.streamlit  GUIDE_INSERTION_EMBEDDINGS.md  JOUR3_RAPPORT.md  JOUR4_RAPPORT.md  README.md  app.py  cli.py  cloud-run-streamlit-deploy.yaml  cloud-run-streamlit-deploy.yaml.bak  cloud-run-streamlit.yaml  cloudbuild-production.yaml  cloudbuild-simple.yaml  cloudbuild-streamlit.yaml  cloudbuild.yaml  deploy-complete.sh  deploy-streamlit-cloudbuild.sh  deploy-streamlit.sh  deploy.sh  example_usage.py  insert_embeddings.py  main.py  pyproject.toml  setup-gcp-project.sh  setup-scheduler.sh  setup-secrets.sh  setup_database.sql  setup_uv.sh  streamlit_app.py  test_agent.py  test_components.py  (+1 more)
knowledge_copilot/: __init__.py  agent.py  gdrive_preview.json  observability.py  preview.json  rag_service.py
knowledge_copilot/connectors/: gdrive_sync.py  github_sync.py
knowledge_copilot/models/: __init__.py
knowledge_copilot/services/: __init__.py
knowledge_copilot/utils/: chunking.py  embeddings.py
